# sip3

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  agant.md  agent.md  docker-compose.dev.yml  docker-compose.yml  freeswitch_research.md  fullchain20.crt
.github/: copilot-instructions.md
.github/workflows/: ci.yml
backend/: Cargo.toml  config.toml.example
backend/migrations/: 001_initial.sql  004_admin_users.sql  005_call_indexes.sql  006_acl.sql  009_security_events.sql  010_sip_messages.sql  012_voicemail.sql  013_invite_security_events.sql  014_voicemail_pin.sql  015_voicemail_email.sql  017_conference_recordings.sql  018_cdr_extras.sql
backend/src/: acl.rs  config.rs  config_watch.rs  db.rs  lib.rs  main.rs  security_guard.rs
backend/src/api/: accounts.rs  acl.rs  admin_users.rs  auth.rs  conferences.rs  email_worker.rs  jwt.rs  messages.rs  metrics.rs  mod.rs  openapi.rs  rate_limit.rs  security.rs  stats.rs  status.rs  turn.rs  voicemail.rs  webhook_dispatcher.rs  webhooks.rs
backend/src/models/: account.rs  acl.rs  admin_user.rs  conference.rs  message.rs  mod.rs  security.rs  voicemail.rs
backend/src/sip/: call_cleanup.rs  conference.rs  conference_media.rs  conference_sdp.rs  errors.rs  g711.rs  handler.rs  media.rs  message.rs  mod.rs  presence.rs  proxy.rs  registrar.rs  response.rs  server.rs  tcp_server.rs  transport.rs  voicemail.rs  voicemail_media.rs  voicemail_mwi.rs  voicemail_sdp.rs  webrtc_gateway.rs  ws_server.rs
backend/src/storage/: mod.rs  voicemail.rs
backend/src/test_client/: assertions.rs  dialog.rs  endpoint.rs  mod.rs  rtp_probe.rs  scenario.rs
backend/tests/: sip_test.rs
docker/: Dockerfile.backend  Dockerfile.frontend  coturn.conf  nginx-default.conf
docker/harbor/: docker-compose.yml  harbor.yml.example
docs/: architecture.md  deployment.md
docs/superpowers/plans/: 2026-05-15-voicemail-implementation.md
docs/superpowers/specs/: 2026-05-15-voicemail-design.md  2026-05-16-ghcr-harbor-sync-design.md  2026-05-16-harbor-registry-deployment-design.md  2026-05-17-gitlab-harbor-dual-ci-design.md  2026-05-18-headless-call-tester-design.md
frontend/: index.html  package-lock.json  package.json  vite.config.js
frontend/src/: App.vue  main.js
frontend/src/components/: EmptyState.vue  PageHeader.vue  SideNav.vue  StatCard.vue  StatusTag.vue  ThemeToggle.vue
frontend/src/composables/: useBreakpoint.js  useTheme.js
frontend/src/router/: index.js
frontend/src/store/: auth.js  index.js
frontend/src/styles/: base.css  tokens.css
frontend/src/utils/: adminVersion.mjs  adminVersion.test.mjs  api.js  callMedia.mjs  callMedia.test.mjs  callUiState.mjs  callUiState.test.mjs  dialpad.mjs  dialpad.test.mjs  sipUsername.mjs  sipUsername.test.mjs
frontend/src/views/: Accounts.vue  Acl.vue  AdminUsers.vue  Calls.vue  Conferences.vue  Dashboard.vue  Login.vue  Phone.vue  Security.vue  Status.vue  Voicemail.vue
migrations/: 001_initial.sql  002_seed.sql  003_media_sessions.sql  007_presence.sql  008_numeric_seed_accounts.sql  011_conference_rooms.sql  012_voicemail.sql  014_conference_pin.sql  016_voicemail_greetings.sql  019_webhooks.sql  020_email_outbox.sql
scripts/: gen-prompts.sh  local-ci.ps1  sync-from-ghcr.sh
voicemail/prompts/: README.md
