[package]
name = "sip3-backend"
version = "0.1.0"
edition = "2024"
rust-version = "1.95"

[lib]
name = "sip3_backend"
path = "src/lib.rs"

[[bin]]
name = "sip3-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"
anyhow = "1"
thiserror = "1"
tokio-util = "0.7"
bytes = "1"
md5 = "0.7"
rand = "0.9"
jsonwebtoken = "9"
ipnet = "2"
native-tls = "0.2"
tokio-native-tls = "0.3"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
webrtc = "0.11"

[dev-dependencies]
tokio-test = "0.4"
md5 = "0.7"
