[package]
name = "sip3-backend"
version = "1.8.0"
edition = "2024"
rust-version = "1.95"

[lib]
name = "sip3_backend"
path = "src/lib.rs"

[[bin]]
name = "sip3-backend"
path = "src/main.rs"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = { version = "0.7", features = ["json", "multipart"] }
tower-http = { version = "0.5", features = ["cors"] }
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
config = "0.14"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
bcrypt = "0.15"
anyhow = "1"
thiserror = "1"
tokio-util = "0.7"
bytes = "1"
md5 = "0.7"
rand = "0.9"
jsonwebtoken = "9"
ipnet = "2"
native-tls = "0.2"
tokio-native-tls = "0.3"
tokio-tungstenite = { version = "0.23", features = ["native-tls"] }
futures-util = { version = "0.3", default-features = false, features = ["sink", "std"] }
hmac = "0.12"
sha1 = "0.10"
base64 = "0.22"
hex = "0.4"
webrtc = "0.11"
# Tier 1: observability
prometheus = { version = "0.13", features = ["process"] }
# Tier 1: OpenAPI / Swagger
utoipa = { version = "4", features = ["axum_extras", "chrono", "uuid"] }
utoipa-swagger-ui = { version = "6", features = ["axum"] }
# Tier 1: webhook delivery + SMTP
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }
sha2 = "0.10"
lettre = { version = "0.11", default-features = false, features = ["smtp-transport", "tokio1-rustls", "ring", "rustls-native-certs", "hostname", "builder"] }
# Tier 1: shared immutable config hot-reload
arc-swap = "1"
# Tier 1: CSV export
csv = "1"

[dev-dependencies]
tokio-test = "0.4"
md5 = "0.7"
